testfx/errors/error_tests/err_14_const_no_init.fx
// 测试14: 常量定义错误 - 缺少初始值
PI :(num)
